--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JUIT Robotics & Automation Lab | Pioneering Innovation in Robotics Research</title>
-    <meta name="description" content="JUIT Robotics & Automation Lab - A cutting-edge research facility dedicated to advancing robotics technology through autonomous systems, human-robot interaction, and industrial automation." />
-    <meta name="author" content="JUIT Robotics Lab" />
+    <title>Dronobotics Lab</title>
+    <meta name="description" content="Dronobotics Lab - A cutting-edge research facility dedicated to advancing robotics technology through autonomous systems, human-robot interaction, and industrial automation." />
+    <meta name="Aditya" content="Dronobotics Lab" />
 
-    <meta property="og:title" content="JUIT Robotics & Automation Lab | Pioneering Innovation" />
+    <meta property="og:title" content="Dronobotics Lab" />
     <meta property="og:description" content="Explore our state-of-the-art robotics lab featuring drones, robotic arms, AI platforms, and more. Submit your innovative project ideas." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="public/LOGO.jpg" />
   </head>
 
   <body>
